# LOSiamMask

./: .gitignore  CMakeLists.txt  README.md
SiamMask/: utils.h
models/SiamMask_DAVIS/: feature_downsampler.pt  mask_conv_kernel.pt  mask_conv_search.pt  mask_depthwise_conv.pt
models/SiamMask_VOT/: feature_downsampler.pt  mask_conv_kernel.pt  mask_conv_search.pt  mask_depthwise_conv.pt
src/: demo.cpp  detector.cpp
